--- a/user/package.json
+++ b/user/package.json
@@ -15,6 +15,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/express-fileupload": "^1.2.2",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^17.0.21",
     "@types/redis": "^4.0.11",
@@ -27,6 +28,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "express-fileupload": "^1.3.1",
     "helmet": "^5.0.2",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
