--- a/socket/package.json
+++ b/socket/package.json
@@ -6,5 +6,15 @@
   "scripts": {},
   "keywords": [],
   "author": "Tunar",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "@types/node": "^17.0.21",
+    "ts-node": "^10.7.0",
+    "typescript": "^4.6.2"
+  },
+  "dependencies": {
+    "dotenv": "^16.0.0",
+    "http": "^0.0.1-security",
+    "socket.io": "^4.4.1"
+  }
 }
