--- a/socket/package.json
+++ b/socket/package.json
@@ -13,6 +13,7 @@
     "typescript": "^4.6.2"
   },
   "dependencies": {
+    "axios": "^0.26.1",
     "dotenv": "^16.0.0",
     "http": "^0.0.1-security",
     "socket.io": "^4.4.1"
