--- a/post/package.json
+++ b/post/package.json
@@ -14,7 +14,9 @@
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/express-fileupload": "^1.2.2",
     "@types/node": "^17.0.21",
+    "@types/uuid": "^8.3.4",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.2"
   },
@@ -23,8 +25,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "express-fileupload": "^1.3.1",
     "helmet": "^5.0.2",
     "joi": "^17.6.0",
-    "mongodb": "^4.4.1"
+    "mongodb": "^4.4.1",
+    "uuid": "^8.3.2"
   }
 }
