--- a/auth/package.json
+++ b/auth/package.json
@@ -12,18 +12,29 @@
   "author": "Tunar",
   "license": "MIT",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/express-fileupload": "^1.2.2",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^17.0.21",
+    "@types/redis": "^4.0.11",
+    "@types/uuid": "^8.3.4",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.2"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "express-fileupload": "^1.3.1",
     "helmet": "^5.0.2",
-    "mongoose": "^6.2.7"
+    "joi": "^17.6.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.2.7",
+    "redis": "^4.0.4",
+    "uuid": "^8.3.2"
   }
 }
